--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.689</version>
+		</dependency>
 	</dependencies>
 
 	<build>
